# so

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  slack_opener.rs
